--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,7 +8,13 @@ html(lang="en")
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
         header
-            h1 It works!
+            h1 Zoom
         main
-            h3 Welcome to Zoom
+            form#nickname
+                input(type="text", placeholder="choose a nickname", require)
+                button Save
+            ul
+            form#new_message
+                input(type="text", placeholder="write a msg", require)
+                button Send
         script(src="/public/js/app.js")
