--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,14 +10,17 @@ html(lang="en")
         header
             h1 Zoom
         main
-            div#welcome
-                form
-                    input(placehoder="room name", required, type="text")
-                    button Enter Room
             div#room
                 h3#roomTitle
-                form
-                    input(placehoder="message", required, type="text")
+                ul
+                form#welcome
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room
+                form#nickname
+                    input(placeholder="nickname", required, type="text")
+                    button Save
+                form#msg
+                    input(placeholder="message", required, type="text")
                     button Send
             
                      
