--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,30 +1,19 @@
 doctype html
 html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Zoom
-        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
-    body 
-        header
-            h1 Zoom
-        main
-            div#room
-                h3#roomTitle
-                ul#chatCont
-                form#welcome
-                    input(placeholder="room name", required, type="text")
-                    button Enter Room
-                    h4 Open Rooms:
-                        ul
-                form#nickname
-                    input(placeholder="nickname", required, type="text")
-                    button Save
-                form#msg
-                    input(placeholder="message", required, type="text")
-                    button Send
-            
-                     
-        script(src="/socket.io/socket.io.js") 
-        script(src="/public/js/app.js")
+	head
+		meta(charset="UTF-8")
+		meta(http-equiv="X-UA-Compatible", content="IE=edge")
+		meta(name="viewport", content="width=device-width, initial-scale=1.0")
+		title Zoom
+		link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+	body 
+		header
+			h1 Zoom
+		main
+			div#myStream 
+				video#myFace(autoplay, playsinline, width="400", height="400")
+				button#mute Mute
+				button#camera Turn Camera off
+				select#cameras
+		script(src="/socket.io/socket.io.js") 
+		script(src="/public/js/app.js")
