--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,10 +10,17 @@ html(lang="en")
 		header
 			h1 Zoom
 		main
-			div#myStream 
-				video#myFace(autoplay, playsinline, width="400", height="400")
-				button#mute Mute
-				button#camera Turn Camera off
-				select#cameras
+			div#welcome
+				form
+					input(placehoder="room name")
+					button Enter Room
+			div#call
+				div#myStream 
+					video#myFace(autoplay, playsinline, width="400", height="400")
+					button#mute Mute
+					button#camera Turn Camera off
+					select#cameras
+					video#peerFace(autoplay, playsinline, width="400", height="400")
+
 		script(src="/socket.io/socket.io.js") 
 		script(src="/public/js/app.js")
