--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -15,12 +15,12 @@ html(lang="en")
 					input(placehoder="room name")
 					button Enter Room
 			div#call
-				div#myStream 
-					video#myFace(autoplay, playsinline, width="400", height="400")
+				div#userStream 
+					video#userVideo(autoplay, playsinline, width="400", height="400")
 					button#mute Mute
 					button#camera Turn Camera off
 					select#cameras
-					video#peerFace(autoplay, playsinline, width="400", height="400")
-
+					//- video#peerFace(autoplay, playsinline, width="400", height="400")
+		
 		script(src="/socket.io/socket.io.js") 
 		script(src="/public/js/app.js")
